--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -35,6 +35,7 @@
       align-items: center
       justify-content: space-between
       flex-direction: column
+      padding: 0
       width: 16px
       height: 11px
       border: none
